fixed add product
