# catalog/storage/api-docs/api-docs.json
@@ -682,6 +682,10 @@
                                     "name": {
                                         "type": "string",
                                         "example": "Игрушки"
+                                    },
+                                    "category_id": {
+                                        "type": "integer",
+                                        "example": "1"
                                     }
                                 },
                                 "type": "object"
